[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/model3d-to-spritesheet/scripts/sprite_generator.gd" type="Script" id=1]
[ext_resource path="res://addons/model3d-to-spritesheet/scenes/GenScene.tscn" type="PackedScene" id=2]

[node name="SpriteGenerator" type="Node"]
script = ExtResource( 1 )

[node name="Scene3D" type="Viewport" parent="."]
size = Vector2( 256, 256 )
own_world = true
transparent_bg = true
hdr = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="GenScene" parent="Scene3D" instance=ExtResource( 2 )]

[node name="SpriteSheet" type="Viewport" parent="."]
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
